# weird-gen

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  analyze_current_results.py  analyze_persona_results.py  compare_baseline_vs_finetuned.py  eval_baseline.py  eval_multi_sample.py  generate_all_plots.py  judge_baseline.py  judge_eval_results.py  main.py  pyproject.toml  run_experiment.sh  temp.py
analysis/: __init__.py  __main__.py  bootstrap.py  compare.py  join.py  metrics.py
configs/: eval.yaml  ideology_eval.yaml  ideology_judge.yaml  judge.yaml  judge_openrouter.yaml  recall_eval.yaml  recall_judge.yaml  sweep.yaml  train.yaml  train_local.yaml  train_tinker.yaml
data_prep/: __init__.py  __main__.py  client.py  combine.py  distill.py  filter.py  io.py  persona.py
docs/: cost_estimate.md
eval/: __init__.py  baseline.py  config.py  format.py  generate.py  io.py  metrics.py
judge/: __init__.py  __main__.py  client.py  config.py  openrouter.py  rubric.py  run.py  settings.py
report/: BASELINE_COMPARISON.md  EVALUATION_REPORT.md  FULL_EVALUATION_REPORT.md  experiment_report.md  experiment_summary.json
scripts/: analyze_eval.py  analyze_ideology.py  analyze_recall.py  bootstrap_ci.py  build_persona_candidates.py  chat.py  chat_unsloth.py  eval_generate.py  eval_ideology_generate.py  eval_judge.py  eval_openrouter.py  eval_tinker.py  export_tinker_weights.py  fetch_prompt_datasets.py  filter_non_identifying.py  generate_report.py  judge_ideology.py  judge_openrouter.py  make_plots.py  plot_eval_format_rates.py  plot_results.py  plot_training.py  (+11 more)
(+56 files in other folders)
